k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-athena
spec:
  selector:
    matchLabels:
      app: athena
  template:
    metadata:
      name: pod-athena
      labels:
        app: athena
    spec:
      containers:
        - name: athena
          image: tuannguyensn2001/athena:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 15000
              protocol: TCP
