k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-athena
  labels:
    app: athena
spec:
  containers:
    - name: athena
      image: tuannguyensn2001/athena:latest
      ports:
        - containerPort: 15000
          protocol: TCP
