k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-athena
  annotations:
    service.beta.kubernetes.io/vultr-loadbalancer-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: athena
  ports:
    - port: 80
      targetPort: 15000
