k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-athena
spec:
  ingressClassName: nginx
  rules:
    - host: athena.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-athena
                port:
                  number: 80
